--- a/src/views/courses.pug
+++ b/src/views/courses.pug
@@ -1,10 +1,6 @@
-doctype html
-html(lang='en')
-head
-    title Hello Hexlet!
-body
-    main
-    h1 Все курсы
+extends ./layout/page
+
+block content
     each course in courses
-        h3= course.title
+        a(href=`/courses/${course.id}`, class='fs-3' )= course.title
         p= course.description
